# backboard_pointcloud

./: .gitignore  RViz_Setup_Guide.md  USAGE_GUIDE.md  check_params.sh  test_filters.sh
backboard_cloud/: metadata.yaml
docs/: backboard_bottom_center_plan.md
src/filter/: CMakeLists.txt  README_FILTERING.md  package.xml
src/filter/config/: filter_comparison.yaml  filter_params.yaml  pointcloud_ws.code-workspace
src/filter/launch/: pointcloud_filter.launch.py
src/filter/src/: pointcloud_filter.cpp
tools/: bag_to_kitti.py  bag_to_pcd.py  bag_to_txt.py  position.py
